# amazon-freertos

cmake/vendors/cypress/CYW943907AEVAL1F/: CMakeLists.txt
cmake/vendors/cypress/CYW954907AEVAL1F/: CMakeLists.txt
cmake/vendors/mediatek/mt7697hx-dev-kit/: CMakeLists.txt
demos/mediatek/mt7697hx-dev-kit/gnu/: feature.mk
lib/lwip/: CMakeLists.txt
lib/secure_sockets/: CMakeLists.txt
tests/mediatek/mt7697hx-dev-kit/gnu/: Makefile  feature.mk
